Build script: require ox-extra's ignore-headlines

--- a/colophon.org
+++ b/colophon.org
@@ -85,6 +85,10 @@ Then we can execute some elisp.
 (load "~/.emacs.d/.local/straight/repos/emacs-htmlize/htmlize.el" t t) ; system-dependant
 (require 'htmlize)
 
+(load "~/.emacs.d/.local/straight/repos/org-mode/contrib/lisp/ox-extra.el" t t)
+(require 'ox-extra)
+(ox-extras-activate '(ignore-headlines))
+
 (setq
  org-html-style-default ""
  org-html-scripts ""
