Build script: hide validation link

--- a/colophon.org
+++ b/colophon.org
@@ -95,6 +95,7 @@ Then we can execute some elisp.
  org-html-htmlize-output-type 'css
  org-html-doctype "html5"
  org-html-html5-fancy t
+ org-html-validation-link nil
  make-backup-files nil
  debug-on-error t)
 
