--- a/install.org
+++ b/install.org
@@ -4,6 +4,9 @@
 #+include: "./resources/preamble.html" export html
 
 * Installation
+:PROPERTIES:
+:CUSTOM_ID: installation
+:END:
 The reference implementation of Org is part of [[https://www.gnu.org/software/emacs/][Emacs]].
 If you already have Emacs installed, you can start using =org-mode= right away!
 
@@ -36,6 +39,9 @@ Once you're ready to Org, check out the [[file:quickstart.org][Quickstart]]
 page for an overview of the syntax.
 
 * Doom, Spacemacs, Scimax, and popular configs
+:PROPERTIES:
+:CUSTOM_ID: configs
+:END:
 The Emacs starter kits [[https://github.com/hlissner/doom-emacs][Doom]],
 [[https://www.spacemacs.org/][Spacemacs]], and
 [[https://github.com/jkitchin/scimax][Scimax]] come with a
@@ -57,11 +63,13 @@ vanilla Emacs there are popular configs such as
 that include org-mode customization, and Org-related packages.
 
 * In Other Editors
-While the full set of Org [[file:features.html][features]] is
-currently exclusive to Emacs, basic functionality for Org files has
-been implemented for a variety of editors.  Here are extensions for
-other editors that enable support for Org files.
-+ [[https://github.com/jceb/vim-orgmode][Vim]]
-+ [[https://atom.io/packages/org-mode][Atom]]
-+ [[https://github.com/vscode-org-mode/vscode-org-mode][VSCode]]
-+ [[https://packagecontrol.io/packages/orgmode][Sublime]]
+:PROPERTIES:
+:CUSTOM_ID: editors
+:END:
+While the full set of Org [[file:features.html][features]] is currently exclusive to Emacs, basic
+functionality for Org files has been implemented for a variety of editors.
+Here are some extensions for other editors that enable support for Org files.
++ Vim :: [[https://github.com/jceb/vim-orgmode][vim-orgmode]] and [[https://github.com/axvr/org.vim][org.vim]]
++ Atom :: [[https://atom.io/packages/org-mode][org-mode]]
++ VSCode :: [[https://github.com/vscode-org-mode/vscode-org-mode][vscode-org-mode]]
++ Sublime :: [[https://packagecontrol.io/packages/orgmode][Orgmode for ST 2 & 3]]
